--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# User
+/configs/.env
+/temp
+/logs
+
 # User-specific stuff
 /.idea
 .idea/**/workspace.xml
